Changing the spacing between the auth message and the correction input.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -140,6 +140,7 @@ footer > p {
 .correctForm {
     overflow: hidden; /* Clearfix */
     clear: both;
+    margin-top: 0.618rem;
 }
 
 .correctForm--textArea {
